# backend/config/routes.rb
@@ -15,6 +15,12 @@ Rails.application.routes.draw do
   end
 
   namespace :api do
+    post "debug/db-error", to: "debug#db_error"
+    post "debug/timeout", to: "debug#timeout"
+    post "debug/memory-leak", to: "debug#memory_leak"
+    post "debug/500", to: "debug#internal_server_error"
+    get "debug/n-plus-one", to: "debug#n_plus_one"
+
     namespace :v1 do
       get "me", to: "me#show"
       resources :todos, only: %i[index create update destroy]
